# FLEXISTACK_CICD_TESTER

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  run_flexi_tests
.github/workflows/: tests.yml
build_asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  run_flexi_tests
html/: md_README.html  pages.html
html/search/: pages_0.js
include/: stack_operations.h
latex/: md_README.tex
src/: stack_operations.c
tests/: main.c  test_flexistack.c
